# restaurent-demo

./: .gitignore  CHANGES.md  COUPON_FIX_SUMMARY.md  FEATURES_STATUS.txt  Frontend guide.txt  MIGRATION_CHECKLIST.md  README.md  guide.txt
Restaurent/: LICENSE  README.md  admin.html  coupon.html  index.html  index.txt  menu.html  test-email.html  test-paypal.html  thank-you.html
backend/: Cargo.toml  DATABASE.md  README.md  schema.sql
backend/migrations/: 0001_init.sql  0001_initial_schema.sql  0002_gift_codes.sql  0003_pending_gift.sql  0004_pending_orders.sql  0005_user_roles.sql  0006_pending_orders_userid.sql  0007_optimizations.sql  0008_add_items_json_to_orders.sql  0008_fix_coupon_fk.sql  0008_remove_coupon_code_fk_constraint.sql  0009_schema_finalization.sql
backend/src/: db.rs  email.rs  main.rs  state.rs
backend/src/payments/: mod.rs
backend/src/routes/: admin.rs  auth.rs  checkout.rs  coupons.rs  email_checkout.rs  gift_coupons.rs  health.rs  mod.rs  orders.rs  paypal.rs  products.rs  test_email.rs  webhooks.rs
deploy/: install.sh  setup.sh  uninstall.sh
frontend/: esbuild.mjs  next.config.mjs  nodemon.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/components/: AboutSection.tsx  ExperienceSection.tsx  GallerySection.tsx  HeroSection.tsx  LanguageSwitcher.tsx  MenuPreview.tsx  NavBar.tsx  Preloader.tsx  SiteFooter.tsx  VisitSection.tsx
frontend/lib/: api.ts
frontend/public/: robots.txt  site.webmanifest  sitemap.xml  sitemap.xml.template
frontend/src/: server.ts
(+35 files in other folders)
