[package]
name = "restaurent-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "time", "macros", "migrate"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-rustls", "ring", "rustls-native-certs"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
tower = { version = "0.4", features = ["make", "util"] }


